<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <item

            android:id="@+id/itinairaire"
            android:color="#ffffff"
            android:icon="@drawable/baseline_directions_black_18dp"
            android:radius="5dp"
            android:shape="rectangle"
            android:title="@string/ongletti" />


        <item
            android:id="@+id/favori"
            android:icon="@drawable/baseline_favorite_black_18dp"
            android:title="@string/ongletfav" />
        <item
            android:id="@+id/fitre"
            android:icon="@drawable/baseline_filter_list_black_18dp"
            android:title="FILTRE" />
        <item
            android:id="@+id/liste"
            android:icon="@drawable/baseline_format_list_bulleted_black_18dp"
            android:title="Voir la liste " />
        <item
            android:id="@+id/map"
            android:icon="@drawable/baseline_format_list_bulleted_black_18dp"
            android:title="Acceder à la carte" />

    </group>
    <item
        android:id="@+id/connec"
        android:title="Utilisateur">

        <menu>

            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/connection"
                    android:icon="@drawable/baseline_input_black_18dp"
                    android:title="@string/ongletconnect" />

                <item
                    android:id="@+id/déconnection"
                    android:icon="@drawable/personne"
                    android:title="SE DECONNECTER"/>

            </group>
        </menu>
    </item>

</menu>